# cosilico-validators

./: .gitignore  CLAUDE.md  ENCODING_STATUS_REPORT.md  PREREGISTRATION.md  README.md  TAX_VALIDATION_PROMPT.md  VALIDATION_REPORT_26_USC_1.md  VALIDATION_RESULTS.md  VALIDATION_RUN_20251225.md  check_status.py  check_status_simple.py  diagnose_mismatches.py  pyproject.toml  validate_26_usc_1.py  validate_26_usc_1_taxsim.py  validate_26_usc_1_taxsim_v2.py  validate_ctc.py  validate_income_tax.py  validation-results.json  validation_26_usc_1_results.json  validation_26_usc_1_taxsim_results.json
.github/workflows/: ci.yml
baselines/: main.json
examples/: eitc_test_cases.yaml
oracles/: generate_oracles.py  pe_cps_oracle.parquet  taxsim_cps_oracle.parquet  variable_mapping.yaml
resources/taxsim/: .gitignore  README.md
scripts/: README.md  encode_new_variables.py  generate_validation_report.py
src/cosilico_validators/: __init__.py  adaptive_validator.py  cli.py  dashboard_export.py  encoding_orchestrator.py  encoding_validator.py  failure_diagnosis.py  improvement_decisions.py  oracle_comparison.py  plugin_history.py  rl_tracker.py  supabase_logger.py  variable_mapping.py
src/cosilico_validators/aggregate/: __init__.py  harness.py
src/cosilico_validators/comparison/: __init__.py  aligned.py  core.py  cps.py  cps_comparison.py  multi_validator.py  (+2 more)
supabase/: validation_schema.sql
taxsim/: README.md  __init__.py  taxsim_client.py  taxsim_comparison.py  test_cases.yaml  test_taxsim.py  variable_mapping.py
tests/: __init__.py  section1_test_cases.json  test_aggregate_harness.py  test_base.py  test_cli_validate_encoding.py  test_consensus.py  test_cps_runner.py  test_microdata.py  test_prd.py  test_psl.py  test_record_comparison.py  test_taxcalc.py  test_taxsim.py  test_yale.py
tests/comparison/: test_cps_comparison.py
(+35 files in other folders)
